--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <header>
         <nav>
-            <div class="logo">JMeals</div>
+            <div class="logo">JTGeats</div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Menu</a></li>
+                <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -21,10 +22,13 @@
     
     <section class="hero">
         <div class="hero-content">
-            <h1>Authentic Home Food in India</h1>
-            <p>Order home-cooked meals from the best kitchens.</p>
-            <input type="text" placeholder="Enter your location">
-            <button>Find Food</button>
+            <div class="home">
+            <h1 >Authentic Home </h1>
+            <h1>Food in India</h1>
+        </div>
+            <p>JTGeats is a courier service in which authentic home cook food is delivered to a customer.</p>
+            <input type="text" placeholder="Search food you love">
+            <button>Search</button>
         </div>
     </section>
     
