--- a/index.html
+++ b/index.html
@@ -26,12 +26,209 @@
             <input type="text" placeholder="Enter your location">
             <button>Find Food</button>
         </div>
+        <div class="hero-img">
+            <img src="assests/cuate.svg" alt="kitchenbg">
+        </div>
     </section>
     
     <section class="menu">
         <h2>Home Kitchen</h2>
         <div class="grid-container" id="home-kitchen">
             <!-- Placeholder for food items -->
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_33GPuoFI7v8.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_CbNAuxSZTFo.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_MqT0asuoIcU.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_nP11TkjxJ7s.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_sejqj6Eaqe8.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_UxRhrU8fPHQ.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_Y6OgisiGBjM.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_60nzTP7_hMQ.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_CbNAuxSZTFo.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_Y6OgisiGBjM.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_nP11TkjxJ7s.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_MqT0asuoIcU.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="rating-box">⭐ 4.5</div>
+                        <div class="delivery-time">📦 50-79 min</div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
         </div>
         <h2>Popular Items</h2>
         <div class="grid-container" id="popular-items">
