--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <section class="hero">
         <div class="hero-content">
             <div class="home">
-            <h1 >Authentic Home </h1>
-            <h1>Food in India</h1>
-        </div>
-            <p>JTGeats is a courier service in which authentic home cook food is delivered to a customer.</p>
+                <h1>Authentic Home</h1>
+                <h1>Food in India</h1>
+            </div>
+            <p>JTGeats is a courier service in which authentic home-cooked food is delivered to a customer.</p>
             <input type="text" placeholder="Search food you love">
             <button>Search</button>
         </div>
@@ -51,9 +51,34 @@
             <button type="submit">Submit</button>
         </form>
     </section>
-    
+
+    <!-- New Feature: Question or Become a Seller Form -->
+    <section class="contact-form">
+        <h2>Do you have a question or want to become a seller?</h2>
+        <form id="seller-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Enter your message" rows="4" required></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+
     <footer>
-        <p>We are providing the best home-cooked food delivery service.</p>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </footer>
     
     <script src="script.js"></script>
