--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -65,8 +67,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -81,8 +85,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -97,8 +103,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -113,8 +121,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -129,8 +139,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -163,8 +175,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -179,8 +193,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -195,8 +211,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -211,8 +229,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
@@ -227,8 +247,10 @@
                     </div>
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
-                        <div class="rating-box">⭐ 4.5</div>
-                        <div class="delivery-time">📦 50-79 min</div>
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
                         <button class="add-btn">+</button>
                     </div>
                 </div>
