--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
                     <div class="menu-info">
                         <div class="menu-info-left">
-                            <span class="rating-box">⭐4.5</span >
+                            <span class="rating-box">⭐ 4.5</span >
                             <span class="delivery-time">50-79 min</span >
                         </div>
                         <button class="add-btn">+</button>
@@ -258,7 +258,60 @@
         </div>
         <h2>Popular Items</h2>
         <div class="grid-container" id="popular-items">
-            <!-- Placeholder for popular items -->
+            <div class="item">
+                <div class="menu-img"><img src="./assests/unsplash_33GPuoFI7v8.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Home Made Pizza</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/pexels-mumma-oyens-8799602 1.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Chilli Chicken</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
+             <div class="item">
+                <div class="menu-img"><img src="./assests/pexels-omar-mahmood-106343 1.png" alt=""></div>
+                <div class="menu-foot">
+                    <!-- First Line: Title & Price -->
+                    <div class="menu-header">
+                        <h3>Tandoori Chicken</h3>
+                        <span class="price">$12.99</span>
+                    </div>
+                    <!-- Second Line: Rating, Delivery Time, and Plus Icon -->
+                    <div class="menu-info">
+                        <div class="menu-info-left">
+                            <span class="rating-box">⭐4.5</span >
+                            <span class="delivery-time">50-79 min</span >
+                        </div>
+                        <button class="add-btn">+</button>
+                    </div>
+                </div>
+             </div>
         </div>
     </section>
     
